test/parser/assignment.dmz
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn bar() -> i32 { return 1; }

fn main() -> void {
    // CHECK: [[# @LINE + 1 ]]:8: error: expected variable on the LHS of an assignment
    bar() = 3;
    
    // CHECK: [[# @LINE + 1 ]]:11: error: expected ';' at the end of assignment
    a = b = 4;

    a = 4;
    // CHECK: Assignment
    // CHECK-NEXT:   DeclRefExpr a
    // CHECK-NEXT:   IntLiteral '4'
}
